fix(tabs): fix tab group label overflow

--- a/parfait/components/sidebar.css
+++ b/parfait/components/sidebar.css
@@ -362,7 +362,6 @@ moz-button[view="viewCustomizeSidebar"] { order: 99; }
       }
     }
     .tab-group-label {
-      width: calc(var(--pf-sidebar-width) - (var(--tab-inner-inline-margin) * 2)) !important;
       font-size-adjust: unset !important;
     }
     .tab-group-label-container,
